--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,5 @@
 deployment:
   tasks:
   - export DEPLOYPATH=/home/kurpaige/public_html/photos/
-  - /bin/cp -R . $DEPLOYPATH
+  - /bin/cp -R images $DEPLOYPATH
   # - /bin/cp style.css $DEPLOYPATH
